@@ -1,3 +1,11 @@
 # SWT-TMS
 
-Time Management System
+A Time-Management Software made in the Software engineering course at HS-Esslingen.
+
+---
+
+This Programm was made with Java 17, JavaFX 13 and Maven 11.
+To run this Programm you need to add the vmArguments 
+```
+"--module-path \"C:/{Path to JavaFX}\" --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.graphics"
+```
